Fix long descriptions, scroll, hide overflow

--- a/app/assets/stylesheets/content.css
+++ b/app/assets/stylesheets/content.css
@@ -12,6 +12,8 @@
 	margin: 0 auto;
 }
 
+
+
 /* NOT IN USE */
 .submenuitem {
 	display: none;
@@ -107,16 +109,7 @@ h4.download {
 	height: 80px;
 	margin-bottom: 20px;
 	text-decoration: none;
-	/* border-left: 5px solid #505050;
-	*/
-	/* -webkit-border-top-left-radius: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-bottomleft: 5px;
-	*/
-	/* border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-	*/
+
 	-webkit-box-shadow: 0px 1px 4px 0px rgba(20, 20, 20, 0.42);
 	-moz-box-shadow: 0px 1px 4px 0px rgba(20, 20, 20, 0.42);
 	box-shadow: 0px 1px 4px 0px rgba(20, 20, 20, 0.42);
@@ -138,17 +131,6 @@ a:visited {
 	background-color: rgb(245, 245, 245);
 	width: 100%;
 	height: 740px;
-	/* margin-bottom: 20px;
-	*/
-	/* border-left: 5px solid #54D282;
-	*/
-	/* -webkit-border-top-left-radius: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-bottomleft: 5px;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-	*/
 	-webkit-box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.12);
 	-moz-box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.12);
 	box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.12);
@@ -219,6 +201,10 @@ p.description {
 	padding-left: 10px;
 	padding-right: 10px;
 	font-size: 14px;
+	word-wrap: break-word; 
+	overflow-x: hidden;
+	overflow-y: scroll;
+	height: 100px;
 }
 p.uploadby {
 	padding-left: 10px;
